my-nats-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: my-nats
    meta.helm.sh/release-namespace: nats
  labels:
    app.kubernetes.io/component: nats
    app.kubernetes.io/instance: my-nats
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nats
    app.kubernetes.io/version: 2.11.1
    helm.sh/chart: nats-1.3.2
  name: my-nats
  namespace: nats
spec:
  type: NodePort
  ports:
    - name: nats
      port: 4222 # Port that the service listens on
      targetPort: 4222 # Port on the NATS pod
      protocol: TCP
      nodePort: 30422 # Choose a port between 30000-32767
  selector:
    app.kubernetes.io/component: nats
    app.kubernetes.io/instance: my-nats
    app.kubernetes.io/name: nats
