my-postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: my-postgresql
    meta.helm.sh/release-namespace: postgres
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: my-postgresql
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 17.4.0
    helm.sh/chart: postgresql-16.6.2
  name: my-postgresql
  namespace: postgres
spec:
  type: NodePort
  ports:
    - name: tcp-postgresql
      port: 5432 # Port that the service listens on
      targetPort: 5432 # Port on the PostgreSQL pod
      protocol: TCP
      nodePort: 30543 # Choose a port between 30000-32767
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: my-postgresql
    app.kubernetes.io/name: postgresql
