ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: observability
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.local # Change this to your desired hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus # Name of the Prometheus service
                port:
                  number: 9090 # Port for the Prometheus service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: observability
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.local # Change this to your desired hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana # Name of the Grafana service
                port:
                  number: 3000 # Port for the Grafana service
